  - 
  - 
  - 
  - 
  - 
  - Add action property to merge request hook (Julien Bianchi)
  - 
  - 
  - 
  - 
  - Add a new API function that retrieves all issues assigned to a single milestone (Justin Whear and Hannes Rosenögger)
  - 
  - 
  - 
  - 
  - 
  - 
  - API: Add support for editing an existing project (Mika Mäenpää and Hannes Rosenögger) 
  - 
  - 
  - 

v 7.7.1
  - Improve mention autocomplete performance
  - Show setup instructions for GitHub import if disabled
  - Allow use http for OAuth applications

v 7.7.0
  - Import from GitHub.com feature
  - Add Jetbrains Teamcity CI service (Jason Lippert)
  - Mention notification level
  - Markdown preview in wiki (Yuriy Glukhov)
  - Raise group avatar filesize limit to 200kb
  - OAuth applications feature
  - Show user SSH keys in admin area
  - Developer can push to protected branches option
  - Set project path instead of project name in create form
  - Block Git HTTP access after 10 failed authentication attempts
  - Updates to the messages returned by API (sponsored by O'Reilly Media)
  - New UI layout with side navigation
  - Add alert message in case of outdated browser (IE < 10)
  - Added API support for sorting projects
  - Update gitlab_git to version 7.0.0.rc14
  - Add API project search filter option for authorized projects
  - Fix File blame not respecting branch selection
  - Change some of application settings on fly in admin area UI
  - Redesign signin/signup pages
  - Close standard input in Gitlab::Popen.popen
  - Trigger GitLab CI when push tags
  - When accept merge request - do merge using sidaekiq job
  - Enable web signups by default
  - Fixes for diff comments: drag-n-drop images, selecting images
  - Fixes for edit comments: drag-n-drop images, preview mode, selecting images, save & update 
  - Remove password strength indicator
  


v 7.6.0
  - Fork repository to groups
  - New rugged version
  - Add CRON=1 backup setting for quiet backups
  - Fix failing wiki restore