@@ -60,6 +60,26 @@ class SystemHooksService
         access_level: model.human_access,
         project_visibility: Project.visibility_levels.key(model.project.visibility_level_field).downcase
       })
+    when Group
+      owner = model.owner
+
+      data.merge!(
+        name: model.name,
+        path: model.path,
+        group_id: model.id,
+        owner_name: owner.respond_to?(:name) ? owner.name : nil,
+        owner_email: owner.respond_to?(:email) ? owner.email : nil,
+      )
+    when GroupMember
+      data.merge!(
+        group_name: model.group.name,
+        group_path: model.group.path,
+        group_id: model.group.id,
+        user_name: model.user.name,
+        user_email: model.user.email,
+        user_id: model.user.id,
+        group_access: model.human_access,
+      )
     end
   end
 
@@ -68,6 +88,9 @@ class SystemHooksService
     when ProjectMember
       return "user_add_to_team"      if event == :create
       return "user_remove_from_team" if event == :destroy
+    when GroupMember
+      return 'user_add_to_group'      if event == :create
+      return 'user_remove_from_group' if event == :destroy
     else
       "#{model.class.name.downcase}_#{event.to_s}"
     end
