@@ -61,5 +61,40 @@ describe SystemHook do
       project.project_members.destroy_all
       WebMock.should have_requested(:post, @system_hook.url).with(body: /user_remove_from_team/).once
     end
+
+    it 'group create hook' do
+      create(:group)
+      WebMock.should have_requested(:post, @system_hook.url).with(
+        body: /group_create/
+      ).once
+    end
+
+    it 'group destroy hook' do
+      group = create(:group)
+      group.destroy
+      WebMock.should have_requested(:post, @system_hook.url).with(
+        body: /group_destroy/
+      ).once
+    end
+
+    it 'group member create hook' do
+      group = create(:group)
+      user = create(:user)
+      group.add_user(user, Gitlab::Access::MASTER)
+      WebMock.should have_requested(:post, @system_hook.url).with(
+        body: /user_add_to_group/
+      ).once
+    end
+
+    it 'group member destroy hook' do
+      group = create(:group)
+      user = create(:user)
+      group.add_user(user, Gitlab::Access::MASTER)
+      group.group_members.destroy_all
+      WebMock.should have_requested(:post, @system_hook.url).with(
+        body: /user_remove_from_group/
+      ).once
+    end
+
   end
 end
