@@ -5,6 +5,8 @@ describe SystemHooksService do
   let (:project)       { create :project }
   let (:project_member) { create :project_member }
   let (:key)           { create(:key, user: user) }
+  let (:group)         { create(:group) }
+  let (:group_member)  { create(:group_member) }
 
   context 'event data' do
     it { event_data(user, :create).should include(:event_name, :name, :created_at, :email, :user_id) }
@@ -15,6 +17,31 @@ describe SystemHooksService do
     it { event_data(project_member, :destroy).should include(:event_name, :created_at, :project_name, :project_path, :project_id, :user_name, :user_email, :access_level, :project_visibility) }
     it { event_data(key, :create).should include(:username, :key, :id) }
     it { event_data(key, :destroy).should include(:username, :key, :id) }
+
+    it do
+      event_data(group, :create).should include(
+        :event_name, :name, :created_at, :path, :group_id, :owner_name,
+        :owner_email
+      )
+    end
+    it do
+      event_data(group, :destroy).should include(
+        :event_name, :name, :created_at, :path, :group_id, :owner_name,
+        :owner_email
+      )
+    end
+    it do
+      event_data(group_member, :create).should include(
+        :event_name, :created_at, :group_name, :group_path, :group_id, :user_id,
+        :user_name, :user_email, :group_access
+      )
+    end
+    it do
+      event_data(group_member, :destroy).should include(
+        :event_name, :created_at, :group_name, :group_path, :group_id, :user_id,
+        :user_name, :user_email, :group_access
+      )
+    end
   end
 
   context 'event names' do
@@ -26,6 +53,10 @@ describe SystemHooksService do
     it { event_name(project_member, :destroy).should eq "user_remove_from_team" }
     it { event_name(key, :create).should eq 'key_create' }
     it { event_name(key, :destroy).should eq 'key_destroy' }
+    it { event_name(group, :create).should eq 'group_create' }
+    it { event_name(group, :destroy).should eq 'group_destroy' }
+    it { event_name(group_member, :create).should eq 'user_add_to_group' }
+    it { event_name(group_member, :destroy).should eq 'user_remove_from_group' }
   end
 
   def event_data(*args)
